# django-getpaid-przelewy24

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
example/example/: settings.py  urls.py
example/orders/: models.py
example/orders/migrations/: 0001_initial.py
example/paywall/: models.py
example/paywall/migrations/: 0003_payment.py
getpaid_przelewy24/: __init__.py  apps.py  client.py  models.py  processor.py  types.py  urls.py  views.py
getpaid_przelewy24/migrations/: 0001_initial.py
tests/: README.md  conftest.py  factories.py  settings.py  test_client.py  test_client_p24_sandbox.py  test_getpaid_przelewy24.py  test_processor.py  urls.py
